tests/snapshots/mark_test__mark_after_delete.snap
---
source: tests/mark_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 2

Buffer:
[l]ine 2
line 3
