tests/snapshots/mark_test__mark_after_insert.snap
---
source: tests/mark_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:8
Lines: 1

Buffer:
INSERTED[ ]line 1
