tests/snapshots/mark_test__mark_after_line_delete.snap
---
source: tests/mark_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:0
Lines: 3

Buffer:
line 2
line 3
[l]ine 4
