tests/snapshots/mark_test__mark_at_eof.snap
---
source: tests/mark_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:5
Lines: 2

Buffer:
line 1
line [2]
