tests/snapshots/mark_test__mark_in_visual_mode.snap
---
source: tests/mark_test.rs
expression: test.snapshot_state()
---
Mode: Visual
Cursor: 1:0
Lines: 3

Buffer:
line 1
[l]ine 2
line 3
