tests/snapshots/mark_test__mark_line_number_changes.snap
---
source: tests/mark_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 4

Buffer:
line 1
[n]ew
line 2
line 3
