tests/snapshots/mark_test__mark_on_empty_line.snap
---
source: tests/mark_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 3

Buffer:
line 1
[ ]
line 3
