tests/snapshots/mark_test__marks_command.snap
---
source: tests/mark_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:0
Lines: 3

Buffer:
line 1
line 2
[l]ine 3
