tests/snapshots/mark_test__quote_vs_backtick.snap
---
source: tests/mark_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 2

Buffer:
[h]ello world
test line
